maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:8: error: not found: value getPosY
  while (getPosY() > 0)
         ^IslandMaze:10: error: not found: value getPosY
    while (!estFaceMur() && getPosY() > 0) avance();
                            ^IslandMaze:13: error: not found: value getPosX
    iniPosX = getPosX();
              ^IslandMaze:14: error: not found: value getPosY
    iniPosY = getPosY();
              ^IslandMaze:20: error: value && is not a member of Unit
      if (estMurNord() && (getPosY() < minY || minY == -1)) minY = getPosY();
                       ^IslandMaze:20: error: not found: value getPosY
      if (estMurNord() && (getPosY() < minY || minY == -1)) minY = getPosY();
                           ^IslandMaze:20: error: not found: value getPosY
      if (estMurNord() && (getPosY() < minY || minY == -1)) minY = getPosY();
                                                                   ^IslandMaze:22: error: not found: value getPosX
    while (getPosX() != iniPosX && getPosY() != iniPosY) //Recherche le point le plus eleve de sa structure
           ^IslandMaze:22: error: not found: value getPosY
    while (getPosX() != iniPosX && getPosY() != iniPosY) //Recherche le point le plus eleve de sa structure
                                   ^IslandMaze:57: error: Boolean does not take parameters
  return isMurNord();
                  ^IslandMaze:57: warning: enclosing method estMurNord has result type Unit: return value discarded
  return isMurNord();
  ^